[gd_scene format=3 uid="uid://bqxvhqxvhqxvh"]

[ext_resource type="Script" path="res://systems/multiplayer/test_multiplayer_system.gd" id="1"]

[node name="MultiplayerTestScene" type="Node"]
script = ExtResource("1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Multiplayer System Test"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="LocalTestButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Test Local Development Mode"

[node name="P2PHostButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Start P2P Host"

[node name="P2PJoinButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Join P2P Game (localhost)"

[node name="HSeparator2" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Status: Ready"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="HelpLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Press H for keyboard shortcuts"
horizontal_alignment = 1